--- a/game.html
+++ b/game.html
@@ -5,3 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./js/game.js" defer></script>
 </head>
+<header>
+  <p id="userScore"></p>
+</header>
+<body></body>
+<footer>
+</footer>
